--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # You should customize this list as applicable to your project.
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
+# ides 
+\.idea
+\.vscode
 
 # Node artifact files
 node_modules/
