--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,19 @@
 # You should customize this list as applicable to your project.
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
-# ides 
+# ides
 \.idea
 \.vscode
 
 # Node artifact files
 node_modules/
 dist/
+
 .env
+
+database/mysql
+database/postgres
+database/redis
 # Compiled Java class files
 *.class
 
