--- a/old-files/.gitignore
+++ b/old-files/.gitignore
@@ -30,6 +30,7 @@ ssl/
 **/database/mongodb
 **/database/mongo
 **/database/redis
+**/database/mysql
 # COVERAGE DIRECTORY USED BY TOOLS LIKE ISTANBUL
 \coverage
 # NYC TEST COVERAGE
