create User service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"transpileOnly": true
 	},
 	"compilerOptions": {
-		"target": "es2020",
+		"target": "ESNext",
 		"moduleResolution": "Node",
 		"module": "CommonJS",
 		"lib": [
