--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
 		"add:major": "npm version major && git status && git add --all  &&  git commit -m  \" Add new Major in Version\" && git push",
 		"up:tags": "git push --follow-tags",
 		"deps": "npm i -g typescript knex",
-		"dev": "npm run start:dev"
+		"dev": "npm run start:dev",
+		"athon:c:s": "zsh bin/console/create-service.sh",
+		"athon:c:m": "zsh bin/console/create-module.sh",
+		"athon:c:md": "zsh bin/console/create-model.sh",
+		"athon:c:t": "zsh bin/console/create-types.sh",
+		"athon:c:e": "zsh bin/console/create-entity.sh",
+		"athon:c:c": "zsh bin/console/create-config.sh"
 	},
 	"keywords": [
 		"API",
@@ -112,6 +118,7 @@
 		"tsup": "^6.6.0",
 		"tsx": "^3.12.3",
 		"typescript": "^4.9.5",
+		"vite-tsconfig-paths": "^4.0.5",
 		"vitest": "^0.28.4"
 	}
 }
