--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
 		"@types/morgan": "^1.9.4",
 		"@types/multer": "^1.4.7",
 		"@types/multer-s3": "^3.0.0",
+		"@types/mysql2": "github:types/mysql2",
 		"@types/node": "^18.15.3",
 		"@types/nodemailer": "^6.4.7",
 		"@types/passport": "^1.0.12",
