--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start:dev:db": "docker-compose down && docker-compose up",
 		"stop": "npx pm2 kill",
 		"stop:dev:db": "docker-compose down",
-		"build": "npm i -f && rm -rf ./dist && npx tsc",
+		"build": "rm -rf ./dist && npx tsc",
 		"test": "npx vitest --config vite.config.ts",
 		"test:cov": "npx vitest --coverage --config vite.config.ts",
 		"knex:migrate:make": "npx knex migrate:make --knexfile knexfile.ts -x ts",
