update teste deploy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 	},
 	"compilerOptions": {
 		"ignoreDeprecations": "5.0",
-		"target": "ESNext",
+		"target": "es2015",
 		"moduleResolution": "Node",
 		"module": "CommonJS",
 		"lib": [
