--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
 	"description": "Project of api in Ma Governance API",
 	"main": "index.js",
 	"scripts": {
-		"start": "npx pm2-runtime start ecosystem.config.js",
+		"start": "npx pm2-runtime start",
 		"start:dev": "npx tsx watch index.ts",
 		"start:dev:db": "docker-compose down && docker-compose up",
 		"stop": "npx pm2 kill",
 		"stop:dev:db": "docker-compose down",
 		"build": "rm -rf ./dist && npx tsc",
-		"test:env": "npx pm2-runtime start ecosystem-test.config.js",
 		"test": "npx vitest --config vite.config.ts",
 		"test:cov": "npx vitest --coverage --config vite.config.ts",
 		"knex:migrate:make": "npx knex migrate:make --knexfile knexfile.ts -x ts",
