--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"up:tags": "git push --follow-tags",
 		"deps": "npm i -g typescript knex",
 		"dev": "npm run start:dev",
+		"release:start": "VERSION=$(node -p \"require('./package').version\") && git flow release start $VERSION",
+		"release:start:m": "git flow release start",
+		"release:finish": "BRANCH=$(node -p \"require('./package').version\") && git flow release finish $BRANCH",
 		"athon:c:s": "zsh bin/console/create-service.sh",
 		"athon:c:m": "zsh bin/console/create-module.sh",
 		"athon:c:md": "zsh bin/console/create-model.sh",
