--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: root
-      POSTGRES_PASSWORD: !root@100
+      POSTGRES_PASSWORD: root@100
       POSTGRES_DB: 'magov_db'
     volumes:
       - ./database/postgres:/var/lib/postgresql/data
